// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.ParseScoreList (ddrworld/error) 1`] = `
Object {
  "currentPage": null,
  "hasNext": false,
  "maxPage": null,
  "nextUrl": "",
  "scores": Array [],
  "status": 1,
}
`;

exports[`Parser.ParseScoreList (ddrworld/hasNext:false) 1`] = `
Object {
  "currentPage": 25,
  "hasNext": false,
  "maxPage": 25,
  "nextUrl": "",
  "scores": Array [
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 938120,
          "scoreRank": 14,
        },
      },
      "musicId": "8OPDQ1oQIOPdqqD18oo0lQ8OQOIbbDoP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "D0qloQo0bQliQqooQ609IP8i09old99D",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996040,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 958100,
          "scoreRank": 15,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 959190,
          "scoreRank": 15,
        },
      },
      "musicId": "0qOPDqq0qld66bll9ob9iIqiiQPiQIDQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "D8I68Ibib9ldQDIPIQdO6lqI61PQlPO9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 964300,
          "scoreRank": 15,
        },
      },
      "musicId": "oiIob81i6d6P6qbddOP6Q0d0obQ0PID9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 969600,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 945100,
          "scoreRank": 14,
        },
      },
      "musicId": "oilPP86l0PPq6Db0qqibQlqDiIOD0l1O",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 989720,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 959590,
          "scoreRank": 15,
        },
      },
      "musicId": "OIOdod8llPlO0lOlb6P8iIQ90qQqoDiP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996630,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 979290,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 941640,
          "scoreRank": 14,
        },
      },
      "musicId": "I61ioI01IOPDPbP1OO0l98PD0iDbid0D",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 946000,
          "scoreRank": 14,
        },
      },
      "musicId": "96QPqq0q6Id0Ii0QbD1bQqPbiDqb0lPo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 915740,
          "scoreRank": 14,
        },
      },
      "musicId": "IQ0dIiDql9Q68d9ddQIiQbq1OPq8Db69",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "ddOOOibQ6qIi9DI1bl8b108I1Ib6QDl9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 964650,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 945640,
          "scoreRank": 14,
        },
      },
      "musicId": "dPb99qdqOQ1ioQ9Dqb1I9Q1bI0l0POII",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 965790,
          "scoreRank": 15,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 965710,
          "scoreRank": 15,
        },
      },
      "musicId": "loD8qPl09qqi0o1iqbbDOdllDblioDIl",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "i9Pidb18b9O8bdqQ91QQP0oPdIdIODq1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 981370,
          "scoreRank": 15,
        },
      },
      "musicId": "Q96bO9D61lib19IiIi0i69P80bo6q69Q",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 991570,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967710,
          "scoreRank": 15,
        },
      },
      "musicId": "l1ODQ1bO9POQ6d8O0Iobbio11qb6O6bd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 977210,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 933980,
          "scoreRank": 14,
        },
      },
      "musicId": "bP10qq9dPDDqIl16lPIDDd8b00dIIP08",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 987430,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967660,
          "scoreRank": 15,
        },
      },
      "musicId": "0IIO08bII0QQDOdobqbl8Ib8Q8O8q1li",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 969820,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 973670,
          "scoreRank": 15,
        },
      },
      "musicId": "D0iDbio81PIbI8dD6QOIP9IidDOP0PDP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 976440,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 949350,
          "scoreRank": 14,
        },
      },
      "musicId": "Dd98lDdo8Ob698d9qbO9iD0PqO19oQbI",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 938330,
          "scoreRank": 14,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 894940,
          "scoreRank": 13,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 22070,
          "scoreRank": 1,
        },
      },
      "musicId": "id9oObq9P6Q6Pq6lQPqI88OP1DD8D0O1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 976690,
          "scoreRank": 15,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 979760,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 720280,
          "scoreRank": 8,
        },
      },
      "musicId": "00obPO6oPIPOoD9qb0dIl6q6D8P6o9bI",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 973420,
          "scoreRank": 15,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 966070,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 760120,
          "scoreRank": 9,
        },
      },
      "musicId": "Q9PP10bOQdIPD1iI99llI9QID9b09q0o",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967630,
          "scoreRank": 15,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 958300,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 579800,
          "scoreRank": 1,
        },
      },
      "musicId": "Di0ODIlddo8d90oo09qqd98QObQP1llI",
      "musicType": -1,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseScoreList (ddrworld/hasNext:true) 1`] = `
Object {
  "currentPage": 1,
  "hasNext": true,
  "maxPage": 25,
  "nextUrl": "http://localhost/game/ddr/ddrworld/playdata/music_data_double.html?offset=1&filter=0&filtertype=0&display=score",
  "scores": Array [
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 989730,
          "scoreRank": 15,
        },
      },
      "musicId": "OboID1PloIIoOOObQdQOP110I61Ddl9I",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 988670,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996530,
          "scoreRank": 16,
        },
      },
      "musicId": "6d10P0Pd1PiD1l6DPQdoPD1Q8DP0QlqQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 954000,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 971380,
          "scoreRank": 15,
        },
      },
      "musicId": "918oPDQDoPlD1OlqlqQI08I6dD9iqoil",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 969790,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 851980,
          "scoreRank": 12,
        },
      },
      "musicId": "111O66bbPIQb09PlIoolIOD666QqqIdP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 985580,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 972280,
          "scoreRank": 15,
        },
      },
      "musicId": "16bl8D8lOddP9Obq0OIlOI6q8Pi1l9O0",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 991770,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 992010,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 990270,
          "scoreRank": 16,
        },
      },
      "musicId": "06O0ObdQobq86lPDo6P18dQ1QPdilIQO",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 973330,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 979370,
          "scoreRank": 15,
        },
      },
      "musicId": "PDoiQoi9q08PQ96Pl6oD9IIi6iq0Q6D6",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 940390,
          "scoreRank": 14,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 975130,
          "scoreRank": 15,
        },
      },
      "musicId": "D6IIDqlO8idioiPo8l61Ob11D6Di0DiQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 992540,
          "scoreRank": 16,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 949340,
          "scoreRank": 14,
        },
      },
      "musicId": "8bQQ0lP96186D8Ibo8IoOd6o16qioiIo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 908040,
          "scoreRank": 14,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 905730,
          "scoreRank": 14,
        },
      },
      "musicId": "1d9lDIl6iiiD0D0d8qd6dlDlq6P8o0QI",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 7,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 999800,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 990680,
          "scoreRank": 16,
        },
      },
      "musicId": "Oq900IIl1Ob8qoIPqDP0PD6blbqIqlP1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 968540,
          "scoreRank": 15,
        },
      },
      "musicId": "61oIP0QIlO90d18ObDP1Dii6PoIQoOD8",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 938330,
          "scoreRank": 14,
        },
      },
      "musicId": "ibI0QllidqQ089ql8dob6bIoodbbIoqq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 970150,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 845430,
          "scoreRank": 11,
        },
      },
      "musicId": "dqP6loDiD0l6b0I6i0iO90i6D0O68qO1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 968530,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 990850,
          "scoreRank": 16,
        },
      },
      "musicId": "Odb0b0ld6P80b8b6QD0IIO866iq8OQ0b",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 963740,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 987530,
          "scoreRank": 15,
        },
      },
      "musicId": "DQ1dqP1IoiD11QOPiI0Q8PqO0Qddo6q6",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "d01QdIl6i69DqIbbQQd6IPOiQOObPdIi",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 960120,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 955270,
          "scoreRank": 15,
        },
      },
      "musicId": "16IqQ680IioldO69QD61liQod0DQ8boQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "Dl09QdQ19IoQl6D81qdlPPIdolP1lDi0",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 981190,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 957150,
          "scoreRank": 15,
        },
      },
      "musicId": "8ooI09QP161IqI00IdPOD1QdDd8oDod9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 997100,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 965020,
          "scoreRank": 15,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 680080,
          "scoreRank": 6,
        },
      },
      "musicId": "9oIO98IPOiq1idiIIbOOqdDQIOdQPPd6",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 958220,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 946230,
          "scoreRank": 14,
        },
      },
      "musicId": "q8iPi1DP6Do6D110OQiQDdPq06q80Qb0",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 991140,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 946620,
          "scoreRank": 14,
        },
      },
      "musicId": "bi9OolI1P9oI8dDPlbQiq01Dl080PQ61",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 993880,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 982010,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 994330,
          "scoreRank": 16,
        },
      },
      "musicId": "bd8oD0iqDQ8Qobd1oIqi8981QbD6I6Iq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 962460,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 963910,
          "scoreRank": 15,
        },
      },
      "musicId": "80PdqQ0iiOQb9i91lIliodiO9PI8O609",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 941610,
          "scoreRank": 14,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 952810,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 915410,
          "scoreRank": 14,
        },
      },
      "musicId": "oQolO9oOO01ll0I8969i8O1IQliloDqP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996280,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 990660,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 971880,
          "scoreRank": 15,
        },
      },
      "musicId": "lqI8DD9Plq6IO8P8P6Pl8Di98DlI9oP8",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 993520,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 874110,
          "scoreRank": 12,
        },
      },
      "musicId": "9I00D9Id61iD6QP8i8Dd6698PoQ9bdi9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 958500,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 847950,
          "scoreRank": 11,
        },
      },
      "musicId": "ilD80b8QQl9Qo0PP0lQ00b8bO9Oqoobo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 975330,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 964760,
          "scoreRank": 15,
        },
      },
      "musicId": "I606oqOODOdQoP0IQOdP6b0DPdb86ddO",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 950200,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 950760,
          "scoreRank": 15,
        },
      },
      "musicId": "i91q8l0bbi8qll000ob6qDiQP891iiql",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "8IoP10odbqPdPPbIq01OID99o98DIoQl",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 4,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 983060,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996240,
          "scoreRank": 16,
        },
      },
      "musicId": "qdQoQli1d8DP0Obb919I6P1Odilib1Dd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 988020,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 995630,
          "scoreRank": 16,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 930700,
          "scoreRank": 14,
        },
      },
      "musicId": "I96dOqqqQIi9oiqbqDPbQ8I8PQbqOb1o",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 960560,
          "scoreRank": 15,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 769480,
          "scoreRank": 9,
        },
      },
      "musicId": "oPP1Pdl6Qdlb8oq10PP1doDibdbbl9bl",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 990520,
          "scoreRank": 16,
        },
      },
      "musicId": "0Ib6qIb0iPOoQqqDIl90dP0PI0o9QlDd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 955040,
          "scoreRank": 15,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967630,
          "scoreRank": 15,
        },
      },
      "musicId": "l9lq19DdiD8qQPoPOlboi1qQii0IQI86",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 943770,
          "scoreRank": 14,
        },
      },
      "musicId": "qIqqdd1Odqi1Iiolq9qqPOi0bPPld8Pb",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 986710,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 987410,
          "scoreRank": 15,
        },
      },
      "musicId": "l1lO999PqIboPQOD86PDQo1ol1iIiiOi",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "ql1Q8P100IIlbl0Pdi08I8qD900idqQq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 965710,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 936280,
          "scoreRank": 14,
        },
      },
      "musicId": "ilbQ0lq89DId9oDl89lbb8lQIPl6i0QO",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 990920,
          "scoreRank": 16,
        },
      },
      "musicId": "id1lodDbo0Iq9088Qd19d1OlDPP01D8o",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 936930,
          "scoreRank": 14,
        },
      },
      "musicId": "O6P1dIO0IDO6o8ib6i8oP86Qb9D08idd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 982830,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967320,
          "scoreRank": 15,
        },
      },
      "musicId": "6OIoOPDb9iI8i1Do9qQ96Q0ddOdd6q9i",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 981370,
          "scoreRank": 15,
        },
      },
      "musicId": "i89IO1PPOl0boOol0bQI19Q9liQ0l6O1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967900,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 788700,
          "scoreRank": 9,
        },
      },
      "musicId": "6dQ0P6odPlD6dQdbP8dIiQQdQ66qllI6",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "8OlQb0IDIOD1qIIiIqI0l6ol06bbDiDi",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 994220,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 992290,
          "scoreRank": 16,
        },
      },
      "musicId": "QIDd80o0OqobODP00ldQ1D9dl81qQi0d",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 964450,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 915540,
          "scoreRank": 14,
        },
      },
      "musicId": "q1DPdd1ooiPi9P0b0Obqq1QqbD86Qb18",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996320,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 988800,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 3,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 930420,
          "scoreRank": 14,
        },
      },
      "musicId": "Dooii0960OioP6Q1l0qi68Q8Dbd9OO91",
      "musicType": -1,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseScoreList (ddrworld/noLogin) 1`] = `
Object {
  "currentPage": null,
  "hasNext": false,
  "maxPage": null,
  "nextUrl": "",
  "scores": Array [],
  "status": 2,
}
`;

exports[`Parser.ParseScoreList (error) 1`] = `
Object {
  "currentPage": null,
  "hasNext": false,
  "maxPage": null,
  "nextUrl": "",
  "scores": Array [],
  "status": 1,
}
`;

exports[`Parser.ParseScoreList (grade dp plus) 1`] = `
Object {
  "currentPage": 1,
  "hasNext": false,
  "maxPage": 1,
  "nextUrl": "",
  "scores": Array [
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 988830,
          "scoreRank": 15,
        },
      },
      "musicId": "bIb6Q6DD9iP1d61dbOqdi6IQPllOb1IP",
      "musicType": -1,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseScoreList (grade dp) 1`] = `
Object {
  "currentPage": 1,
  "hasNext": false,
  "maxPage": 1,
  "nextUrl": "",
  "scores": Array [
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 947180,
          "scoreRank": 14,
        },
      },
      "musicId": "9IliQ1O0dOQPiObPDDDblDO6oliDodlb",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 952340,
          "scoreRank": 15,
        },
      },
      "musicId": "IlQodD9Dbld8QiOql68bPPQbd6bll6i1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967720,
          "scoreRank": 15,
        },
      },
      "musicId": "dib16I1b0o9OdOd1O90dO1Q6iIO9PQo9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 982370,
          "scoreRank": 15,
        },
      },
      "musicId": "8OoDQb16lP0i96qiDQqo90Q6bOP1o89D",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 973930,
          "scoreRank": 15,
        },
      },
      "musicId": "ddql809Qo8q68918lIDOPDQ6q1liD9b6",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 934000,
          "scoreRank": 14,
        },
      },
      "musicId": "9D69dQo1dQqPD6l9ObiI0b0i8d9ddool",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 778200,
          "scoreRank": 9,
        },
      },
      "musicId": "Pbbidbl9l8IqddQOq0069oQ6Oi1DQdP1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 737560,
          "scoreRank": 8,
        },
      },
      "musicId": "idiOI1Qb9D0dQI6IOlob8QbOqdDOoObP",
      "musicType": -1,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseScoreList (hasNext:false) 1`] = `
Object {
  "currentPage": 18,
  "hasNext": false,
  "maxPage": 18,
  "nextUrl": "",
  "scores": Array [
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 950170,
          "scoreRank": 15,
        },
      },
      "musicId": "io9b89PD18ibIO8PIqb1QODliqDdqiIO",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 920500,
          "scoreRank": 14,
        },
      },
      "musicId": "olloQOobddiIIPObP91l0qPl6oo8P9Dl",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "dbq9dPPOQ60ibOol0I6b9iQol9lD669D",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 944380,
          "scoreRank": 14,
        },
      },
      "musicId": "QQbiq1qQd8d1blOldi889OdQd9P1106Q",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 925780,
          "scoreRank": 14,
        },
      },
      "musicId": "qI06bbQ1dloi0IIIO1IQ1q8bdPdl6l69",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "01808Q1Q6lQQ1lP0qd80I0b0qqDd1OOP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967420,
          "scoreRank": 15,
        },
      },
      "musicId": "I81iP0Io9o1l9li0Iq99P1091O8DoDOd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "d6iI8ii9qi0Pi80dDQQlPq6qQo69860P",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 810900,
          "scoreRank": 11,
        },
      },
      "musicId": "8bI68oIq08d99P880bDPQ9D80O099Q10",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "blI8D10Q1IDQ8Q19bi0IDlD80oD0bloi",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 965340,
          "scoreRank": 15,
        },
      },
      "musicId": "Qo1qdD0Q9d11d9Id6o09P9id8lPbOQ6o",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 976500,
          "scoreRank": 15,
        },
      },
      "musicId": "bDDd08iP8dlIlOo6iqd91dPiI1lQdOQq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 883040,
          "scoreRank": 12,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 961610,
          "scoreRank": 15,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 861520,
          "scoreRank": 12,
        },
      },
      "musicId": "PQQd6lQlDqilqliI0IobolqIDlo0Iboq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 938120,
          "scoreRank": 14,
        },
      },
      "musicId": "8OPDQ1oQIOPdqqD18oo0lQ8OQOIbbDoP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "D0qloQo0bQliQqooQ609IP8i09old99D",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 958100,
          "scoreRank": 15,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 959190,
          "scoreRank": 15,
        },
      },
      "musicId": "0qOPDqq0qld66bll9ob9iIqiiQPiQIDQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "D8I68Ibib9ldQDIPIQdO6lqI61PQlPO9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "oiIob81i6d6P6qbddOP6Q0d0obQ0PID9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996630,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 959410,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 918330,
          "scoreRank": 14,
        },
      },
      "musicId": "I61ioI01IOPDPbP1OO0l98PD0iDbid0D",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 946000,
          "scoreRank": 14,
        },
      },
      "musicId": "96QPqq0q6Id0Ii0QbD1bQqPbiDqb0lPo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 862480,
          "scoreRank": 12,
        },
      },
      "musicId": "IQ0dIiDql9Q68d9ddQIiQbq1OPq8Db69",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "ddOOOibQ6qIi9DI1bl8b108I1Ib6QDl9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "i9Pidb18b9O8bdqQ91QQP0oPdIdIODq1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "Q96bO9D61lib19IiIi0i69P80bo6q69Q",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 968660,
          "scoreRank": 15,
        },
      },
      "musicId": "80Q1idDo6O6Db0106b0q6qbOP1P8QQb0",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 991570,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 967710,
          "scoreRank": 15,
        },
      },
      "musicId": "l1ODQ1bO9POQ6d8O0Iobbio11qb6O6bd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 977210,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 933980,
          "scoreRank": 14,
        },
      },
      "musicId": "bP10qq9dPDDqIl16lPIDDd8b00dIIP08",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 987430,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 936230,
          "scoreRank": 14,
        },
      },
      "musicId": "0IIO08bII0QQDOdobqbl8Ib8Q8O8q1li",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 969820,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 954300,
          "scoreRank": 15,
        },
      },
      "musicId": "D0iDbio81PIbI8dD6QOIP9IidDOP0PDP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 949350,
          "scoreRank": 14,
        },
      },
      "musicId": "Dd98lDdo8Ob698d9qbO9iD0PqO19oQbI",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 837650,
          "scoreRank": 11,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 894940,
          "scoreRank": 13,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 22070,
          "scoreRank": 1,
        },
      },
      "musicId": "id9oObq9P6Q6Pq6lQPqI88OP1DD8D0O1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 949230,
          "scoreRank": 14,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 720280,
          "scoreRank": 8,
        },
      },
      "musicId": "00obPO6oPIPOoD9qb0dIl6q6D8P6o9bI",
      "musicType": -1,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseScoreList (hasNext:true) 1`] = `
Object {
  "currentPage": 1,
  "hasNext": true,
  "maxPage": 18,
  "nextUrl": "http://localhost/game/ddr/ddra20/p/playdata/music_data_double.html?offset=1&filter=0&filtertype=0&sorttype=0",
  "scores": Array [
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 980240,
          "scoreRank": 15,
        },
      },
      "musicId": "QPd01OQqbOIiDoO1dbdo1IIbb60bqPdl",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 868570,
          "scoreRank": 12,
        },
      },
      "musicId": "OboID1PloIIoOOObQdQOP110I61Ddl9I",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 941410,
          "scoreRank": 14,
        },
      },
      "musicId": "918oPDQDoPlD1OlqlqQI08I6dD9iqoil",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 928580,
          "scoreRank": 14,
        },
      },
      "musicId": "16bl8D8lOddP9Obq0OIlOI6q8Pi1l9O0",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 991770,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 972640,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 978110,
          "scoreRank": 15,
        },
      },
      "musicId": "06O0ObdQobq86lPDo6P18dQ1QPdilIQO",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 990280,
          "scoreRank": 16,
        },
      },
      "musicId": "d0DDd1dP6llPbioqPdiQ0IDd918bDqI8",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 944460,
          "scoreRank": 14,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 949340,
          "scoreRank": 14,
        },
      },
      "musicId": "8bQQ0lP96186D8Ibo8IoOd6o16qioiIo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 908040,
          "scoreRank": 14,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 905730,
          "scoreRank": 14,
        },
      },
      "musicId": "1d9lDIl6iiiD0D0d8qd6dlDlq6P8o0QI",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 7,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 999800,
          "scoreRank": 16,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 954110,
          "scoreRank": 15,
        },
      },
      "musicId": "Oq900IIl1Ob8qoIPqDP0PD6blbqIqlP1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 899170,
          "scoreRank": 13,
        },
      },
      "musicId": "61oIP0QIlO90d18ObDP1Dii6PoIQoOD8",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "ibI0QllidqQ089ql8dob6bIoodbbIoqq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 960120,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 955270,
          "scoreRank": 15,
        },
      },
      "musicId": "16IqQ680IioldO69QD61liQod0DQ8boQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 993880,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 982010,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 975060,
          "scoreRank": 15,
        },
      },
      "musicId": "bd8oD0iqDQ8Qobd1oIqi8981QbD6I6Iq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 931700,
          "scoreRank": 14,
        },
      },
      "musicId": "80PdqQ0iiOQb9i91lIliodiO9PI8O609",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 941610,
          "scoreRank": 14,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 952810,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 915410,
          "scoreRank": 14,
        },
      },
      "musicId": "oQolO9oOO01ll0I8969i8O1IQliloDqP",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 996280,
          "scoreRank": 16,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 963030,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 952130,
          "scoreRank": 15,
        },
      },
      "musicId": "lqI8DD9Plq6IO8P8P6Pl8Di98DlI9oP8",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 976950,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 852650,
          "scoreRank": 12,
        },
      },
      "musicId": "9I00D9Id61iD6QP8i8Dd6698PoQ9bdi9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 890620,
          "scoreRank": 13,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 826070,
          "scoreRank": 11,
        },
      },
      "musicId": "ilD80b8QQl9Qo0PP0lQ00b8bO9Oqoobo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 938090,
          "scoreRank": 14,
        },
      },
      "musicId": "i91q8l0bbi8qll000ob6qDiQP891iiql",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 983060,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 986330,
          "scoreRank": 15,
        },
      },
      "musicId": "qdQoQli1d8DP0Obb919I6P1Odilib1Dd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 975970,
          "scoreRank": 15,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 930700,
          "scoreRank": 14,
        },
      },
      "musicId": "I96dOqqqQIi9oiqbqDPbQ8I8PQbqOb1o",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 954720,
          "scoreRank": 15,
        },
      },
      "musicId": "oPP1Pdl6Qdlb8oq10PP1doDibdbbl9bl",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 939340,
          "scoreRank": 14,
        },
      },
      "musicId": "0Ib6qIb0iPOoQqqDIl90dP0PI0o9QlDd",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 820400,
          "scoreRank": 11,
        },
      },
      "musicId": "l9lq19DdiD8qQPoPOlboi1qQii0IQI86",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 943770,
          "scoreRank": 14,
        },
      },
      "musicId": "qIqqdd1Odqi1Iiolq9qqPOi0bPPld8Pb",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 986710,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 987410,
          "scoreRank": 15,
        },
      },
      "musicId": "l1lO999PqIboPQOD86PDQo1ol1iIiiOi",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "ql1Q8P100IIlbl0Pdi08I8qD900idqQq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 943290,
          "scoreRank": 14,
        },
      },
      "musicId": "id1lodDbo0Iq9088Qd19d1OlDPP01D8o",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 950510,
          "scoreRank": 15,
        },
      },
      "musicId": "i89IO1PPOl0boOol0bQI19Q9liQ0l6O1",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 992290,
          "scoreRank": 16,
        },
      },
      "musicId": "QIDd80o0OqobODP00ldQ1D9dl81qQi0d",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 948110,
          "scoreRank": 14,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 900810,
          "scoreRank": 14,
        },
      },
      "musicId": "QoDQ0oq08QqiI0DQ8dIPb10qIi6d6i89",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 943240,
          "scoreRank": 14,
        },
      },
      "musicId": "8Q8OiP8QPbl8bqID1loQq896ldPQd99o",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 835860,
          "scoreRank": 11,
        },
      },
      "musicId": "q6iD8idqo69qIPl00IQidoq1o1o1d1b9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 986770,
          "scoreRank": 15,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 970000,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 985530,
          "scoreRank": 15,
        },
      },
      "musicId": "16oDDIlP8bIODQ6Ql0881d9Qqdb19b98",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 954350,
          "scoreRank": 15,
        },
      },
      "musicId": "IbDoODD9qb66Iqd6DbOQiOoDll1DqiO9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 941190,
          "scoreRank": 14,
        },
      },
      "musicId": "Pd1d96Q91oiboqb86DdddD68dbq81Pdo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 903190,
          "scoreRank": 14,
        },
      },
      "musicId": "qiDOD0iidOli9l0qbP6IbOD19OQ8D8Po",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 956890,
          "scoreRank": 15,
        },
      },
      "musicId": "QlID98Ddoi6O8lP8IQd6iid610011l60",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 985290,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 922770,
          "scoreRank": 14,
        },
      },
      "musicId": "I1qd16dPdqPi96ql0lP10OQDbo11D89P",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 987100,
          "scoreRank": 15,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 980770,
          "scoreRank": 15,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 997090,
          "scoreRank": 16,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 741050,
          "scoreRank": 8,
        },
      },
      "musicId": "Q9Q088PPd0bPi9QQ8iil1lQqPdiQP69D",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 951930,
          "scoreRank": 15,
        },
      },
      "musicId": "i9il1DIDl91Db0OdllOddIqO600Pl89q",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 930940,
          "scoreRank": 14,
        },
      },
      "musicId": "qilOP8l6bDPi98lqDbO6O1obOi068QOQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 926780,
          "scoreRank": 14,
        },
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 873030,
          "scoreRank": 12,
        },
      },
      "musicId": "bo9l0Dl0PbqQQQ16Qq6bOOi68o0996Pq",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 881630,
          "scoreRank": 12,
        },
      },
      "musicId": "qbbPQoqqqiPd98d61P0qDd0iDId6OqoQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 682940,
          "scoreRank": 6,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 865410,
          "scoreRank": 12,
        },
      },
      "musicId": "9idOOIdDO01D8PO06bOPPbOIOoiQ8O0P",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "5": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 945410,
          "scoreRank": 14,
        },
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 943090,
          "scoreRank": 14,
        },
      },
      "musicId": "O9qDQOQO8dDDIiO9dPP0Pb8qQo9l89D9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 849630,
          "scoreRank": 11,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 962170,
          "scoreRank": 15,
        },
      },
      "musicId": "911lId0IooIOq1oDPoQ0iQiDiOIbd6oo",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 922760,
          "scoreRank": 14,
        },
      },
      "musicId": "doIiQl6oDPP6i9qobqoobblPQqPiI9bD",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 966380,
          "scoreRank": 15,
        },
      },
      "musicId": "1P9bqO00bIQ0q8d1Q80l0Dq8oi6boqb0",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "6": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 900680,
          "scoreRank": 14,
        },
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 957630,
          "scoreRank": 15,
        },
      },
      "musicId": "D11ldIqD8dQIi9oQQIIo86QOI8D9olP8",
      "musicType": -1,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseScoreList (noLogin) 1`] = `
Object {
  "currentPage": null,
  "hasNext": false,
  "maxPage": null,
  "nextUrl": "",
  "scores": Array [],
  "status": 2,
}
`;

exports[`Parser.ParseScoreList (nonstop) 1`] = `
Object {
  "currentPage": 1,
  "hasNext": false,
  "maxPage": 1,
  "nextUrl": "",
  "scores": Array [
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 6,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 957550,
          "scoreRank": 15,
        },
      },
      "musicId": "qbbOOO1QibO1861bqQII9lqlPiIoqb98",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": 5,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 938620,
          "scoreRank": 14,
        },
      },
      "musicId": "I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "8": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 900110,
          "scoreRank": 14,
        },
      },
      "musicId": "88o8Oq69ldilblP10DI0qqb6b8I0DDi9",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {},
      "musicId": "q6oOPqQPlOQoooq888bPI1OPDlqDIQQD",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 908230,
          "scoreRank": 14,
        },
      },
      "musicId": "i1DqPb01I6I1dP8qoO1qiIPDlOD9D9oQ",
      "musicType": -1,
    },
    ScoreData {
      "difficulty": Object {
        "7": ScoreDetail {
          "clearCount": null,
          "clearType": null,
          "flareRank": null,
          "flareSkill": null,
          "maxCombo": null,
          "playCount": null,
          "score": 862990,
          "scoreRank": 12,
        },
      },
      "musicId": "DQilQP810dq8D9i11q6Oq0ooDdQQO0lI",
      "musicType": -1,
    },
  ],
  "status": 0,
}
`;
